@@ -156,6 +156,9 @@ Optimizations
 Other Changes
 ----------------------
 
+* SOLR-4653: Solr configuration should log inaccessible/ non-existent relative paths in lib 
+  dir=... (Dawid Weiss)
+
 * SOLR-4317: SolrTestCaseJ4: Can't avoid "collection1" convention (Tricia Jenkins, via Erick Erickson)
 
 * SOLR-4571: SolrZkClient#setData should return Stat object. (Mark Miller)
